deployment/example-workload/ingressroute/03-delegation-within-namespace/root.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: delegation-root
  namespace: default
spec: 
  virtualhost:
    fqdn: root.bar.com
  routes: 
    - match: /
      services: 
        - name: s1
          port: 80
# delegate the subpath, `/service2` to the IngressRoute object in this namespace with the name `service2`
    - match: /service2 
      delegate:
        name: service2
